--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,9 @@
     <section class="main">
       <div class="container">
         <h1>웹프로그래밍 (web Programing)</h1>
-        <h1>About</h1>
+        <h1>contact</h1>
         <h3>prod.MinWook</h3>
         <hr />
-        <p>중부대 21학번 성민욱이다.</p>
         <p>연락쳐: 010-8945-8639</p>
         <p>이메일: sungmw1004@gmail.com</p>
         <hr />
