--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
+<!--HTML5문서라는 의미-->
 <html lang="en">
-  <!--언어지정-->
+  <!--HTML 페이지의 루트 요소-->
   <head>
+    <!--HTML 사이트제목-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>웨프로그래밍 데모</title>
+    <!--제목-->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--문서의 본문-->
     <!-- 메뉴 -->
     <nav class="navbar">
       <div class="container">
@@ -30,7 +34,9 @@
     <section class="main">
       <div class="container">
         <h1>웹프로그래밍 (web Programing)</h1>
+        <!--제일큰 글자크기 머릿말-->
         <h3>
+          <!--글자 크기-->
           웹 개발자를 위한 온라인 메뉴얼:
           <hr />
           <a href="https://www.w3schools.com/">w3Schools </a>
@@ -47,8 +53,10 @@
         <h3>현제시간: <span id="time"></span></h3>
 
         <hr />
+        <!--선-->
 
         <p>
+          <!--문단,단락-->
           배경색 바꾸기:
           <button onclick="pink()">Pink</button>
           <button onclick="green()">Green</button>
