--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!-- 메인섹션 -->
     <section class="main">
+      <!--section구분-->
       <div class="container">
         <h1>웹프로그래밍 (web Programing)</h1>
         <!--제일큰 글자크기 머릿말-->
