--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
         <hr />
         <p>연락쳐: 010-8945-8639</p>
         <p>이메일: sungmw1004@gmail.com</p>
+        <img src="image/cat.png" alt="it's my girl friend">
         <hr />
         <br />
         <div>
