--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!--HTML 페이지의 루트 요소-->
   <head>
     <!--HTML 사이트제목-->
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" /> <!-- 별 차이 없이 다 처리한다해서 그냥 공식처럼 써주자 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>웨프로그래밍 데모</title>
     <!--제목-->
