--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p>
           배워봅시다:
           <button onmouseover="showhtml()" onmouseout="hide()">HTML5</button>
+          <!-- 요놈이 마우스 올렸을 때 그리고  마우스 뻈을 때  -->
           <button onmouseover="showcss()" onmouseout="hide()">CSS</button>
           <button onmouseover="showjs()" onmouseout="hide()">JavaScript</button>
         </p>
