--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <button onclick="black()">Black</button>
           <button onclick="Red()">Red</button>
           <button onclick="Yellow()">Yellow</button>
+          <!-- 클릭했을 때   색깔 -->
         </p>
         <p>
           배워봅시다:
